syntax = "proto3";
package protocol;

option optimize_for = SPEED;
option go_package = "go.miragespace.co/specter/spec/protocol";

import "spec/proto/pow.proto";

service PKIService {
    rpc RequestCertificate(CertificateRequest) returns (CertificateResponse);
    rpc RenewCertificate(RenewalRequest) returns (CertificateResponse);
}

message CertificateRequest {
    ProofOfWork proof = 1;
}

message RenewalRequest {
    ProofOfWork proof = 1;
    bytes prev_cert_der = 2;
}

message CertificateResponse {
    bytes cert_der = 1;
    bytes cert_pem = 2;
}